- fix DUMP_OPTS param - create separate schema dump - check config dir

--- a/.env.sample
+++ b/.env.sample
@@ -12,7 +12,7 @@
 ####=============
 # DUMP_PREFIX="" - каталог где размещены pg_dump & pg_dumpall (на случай если в системе установлено больше одной версии postgresql)
 # DUMP_JOBS=8 - параллельные потоки
-# DUMP_OPTIONS="--compress=9" - прочие опции для pg_dump
+# DUMP_OPTS="--compress=9" - прочие опции для pg_dump
 # CONN_USER="root" - user/password для подключения (если запускается не из под postgres. не тестировалось!!)
 # CONN_PASS="root"
 # TTL_DAYS_DAILY=8  - время хранения архивов для daily|weekly|monthly
